--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -2,7 +2,10 @@ PREDEF:
   - preface.re
 
 CHAPS:
-  - article.re
+  - local-repository.re
+  - remote-repository.re
+  - collaboration.re
+  - ochibohiroi.re
 
 APPENDIX:
 
