--- a/articles/config.yml
+++ b/articles/config.yml
@@ -17,7 +17,7 @@ review_version: 5.0
 # inherit: ["A.yml", "B.yml"]
 
 # ブック名(ファイル名になるもの。ASCII範囲の文字を使用)
-bookname: ReVIEW-Template
+bookname: first-git-book
 # 記述言語。省略した場合はja
 language: ja
 
