--- a/articles/config.yml
+++ b/articles/config.yml
@@ -69,12 +69,12 @@ pbl: Tabikaze
 # contact: 連絡先
 
 # 刊行日(省略した場合は実行時の日付)
-date: 2022-8-31
+date: 2022-9-10
 # 発行年月。YYYY-MM-DD形式による配列指定。省略した場合はdateを使用する
 # 複数指定する場合は次のように記述する
 # [["初版第1刷の日付", "初版第2刷の日付"], ["第2版第1刷の日付"]]
 # 日付の後ろを空白文字で区切り、任意の文字列を置くことも可能。
-history: [["2022-8-31 技術書典13版 v1.0.0"]]
+history: [["2022-9-10 技術書典13版 v1.0.0"]]
 # 権利表記(配列で複数指定可)
 # rights: (C) 2016 Re:VIEW Developers
 rights: (C) 2022-2022 Tabikaze
@@ -130,7 +130,7 @@ toc: true
 #
 # 表紙に配置し、書籍の影絵にも利用する画像ファイル。省略した場合はnull (画像を使わない)。画像ディレクトリ内に置いてもディレクトリ名は不要(例: cover.jpg)
 # PDFMaker 固有の表紙設定は pdfmaker セクション内で上書き可能
-# coverimage: cover.png
+coverimage: cover.jpg
 #
 # 表紙の後に大扉ページを作成するか。省略した場合はtrue (作成する)
 titlepage: true
